# checklists

./: .gitignore  Makefile  README.md  pyproject.toml
examples/json/: example.json
examples/toml/: example.toml
examples/yaml/: example.yaml
src/checklists/: __init__.py  __main__.py  config.py
